--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -52,17 +52,9 @@
     color: white;
 }
 
-.editButton {
+.editButton, .cancelButton {
     color: black !important;
 }
-
-/*.k-datepicker .k-picker-wrap, .k-datetimepicker .k-picker-wrap, .k-timepicker .k-picker-wrapt {
-    border-color: red !important;
-}*/
-
-/*.k-picker-wrap {
-    border-color: red !important;
-}*/
 
 .fieldRequired {
     border-color: red;
