Download resources part 1

--- a/TaskManagerApp/Views/Assignment/Index.cshtml
+++ b/TaskManagerApp/Views/Assignment/Index.cshtml
@@ -79,7 +79,7 @@
                             .IsEqualTo("Es igual a")
                             .IsNotEqualTo("Es diferente de")
                             .IsGreaterThanOrEqualTo("Mayor o igual que")
-                            .IsGreaterThan("Despúes de")
+                            .IsGreaterThan("Después de")
                             .IsLessThanOrEqualTo("Hasta")
                             .IsLessThan("Antes de"))
                         .ForNumber(num => num.Clear()
