--- a/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
+++ b/TaskManagerApp/Views/Schedule/CreatePartial.cshtml
@@ -30,7 +30,6 @@
                             {
                                 @class = "form-control",
                                 Id = "cbxAssignments",
-                                onchange = "removeErrorMessage('cbxAssignments','lblAssignmentsError')",
                                 style = "width: 90%",
                             })
                         <span id="lblAssignmentsError" class="text-danger"></span>
@@ -44,12 +43,12 @@
                         @(Html.Kendo().DatePicker()
                             .Name("dtpDate")
                             .Format("dd/MM/yyyy")
-                            .WeekNumber()
+                            //.WeekNumber()
                             .Culture("es-DO")
+                            .DisableDates(DayOfWeek.Saturday, DayOfWeek.Sunday)
                             .HtmlAttributes(new
                             {
                                 Id = "dtpDate",
-                                onchange = "removeErrorMessage('dtpDate','lblDateError')",
                                 style = "width: 100%",
                                 placeholder = "DD/MM/YYYY",
                             })
@@ -77,7 +76,6 @@
                             {
                                 @class = "form-control",
                                 Id = "cbxStatuses",
-                                onchange = "removeErrorMessage('cbxStatuses','lblStatusesError')",
                                 style = "width: 90%",
                             })
                         <span id="lblStatusesError" class="text-danger"></span>
