--- a/TaskManagerApp/Views/Shared/_Layout.cshtml
+++ b/TaskManagerApp/Views/Shared/_Layout.cshtml
@@ -3,27 +3,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+    <script src="~/js/kit.fontawesome.js"></script>
+
     <title>@ViewData["Title"] - Gestor de tareas</title>
 
     <link rel="stylesheet" href="~/css/ionicons.min.css">
-    <link href="~/css/generic.css" rel="stylesheet"/>
+    <link href="~/css/generic.css" rel="stylesheet" />
     <environment names="Development">
-        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css"/>
+        <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.css" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/css/bootstrap.min.css"
-              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"/>
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
+        
+        <link href="~/css/bootstrap.min.v4.1.3.css" rel="stylesheet" />
     </environment>
-    <link href="https://kendo.cdn.telerik.com/2020.2.513/styles/kendo.bootstrap-v4.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://kendo.cdn.telerik.com/2020.2.513/styles/kendo.bootstrap-v4.min.css" rel="stylesheet" type="text/css" />
     <script src="https://kendo.cdn.telerik.com/2020.2.513/js/jquery.min.js"></script>
 
     <script src="https://kendo.cdn.telerik.com/2020.2.513/js/jszip.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2020.2.513/js/kendo.all.min.js"></script>
     <script src="https://kendo.cdn.telerik.com/2020.2.513/js/kendo.aspnetmvc.min.js"></script>
+
+    <link href="~/css/bootstrap.min.v4.1.3.css" rel="stylesheet" />
+    <script src="~/js/jquery.min.js"></script>
+    <script src="~/js/jszip.min.js"></script>
+    <script src="~/js/kendo.all.min.js"></script>
+    <script src="~/js/kendo.aspnetmvc.min.js"></script>
 </head>
 
 <body class="k-content">
@@ -71,6 +82,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             asp-fallback-src="~/lib/bootstrap/js/bootstrap.min.js"
             asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"></script>
+    
+    <script src="~/js/bootstrap.min.v4.1.3.js"></script>
 </environment>
 
 
