--- a/TaskManagerApp/Views/Schedule/Index.cshtml
+++ b/TaskManagerApp/Views/Schedule/Index.cshtml
@@ -145,4 +145,7 @@
     }
 </script>
 
+<script src="~/js/moment.js"></script>
+<script src="~/js/moment-with-locales.js"></script>
+
 <script src="~/js/schedule.js"></script>
