Set pending when date greater than current day

--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -52,6 +52,11 @@
     color: white;
 }
 
+/*.outOfDate:hover {
+    background-color: red !important;
+    color: white !important;
+}*/
+
 .editButton, .cancelButton {
     color: black !important;
 }
