Persist schedule groups state after refresh

--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -52,6 +52,11 @@
     color: white;
 }
 
+.k-alt outOfDate {
+    background-color: red;
+    color: white;
+}
+
 /*.outOfDate:hover {
     background-color: red !important;
     color: white !important;
