Increase gird width

--- a/TaskManagerApp/wwwroot/css/generic.css
+++ b/TaskManagerApp/wwwroot/css/generic.css
@@ -73,3 +73,9 @@
 /*body.modal-open {
     overflow: hidden;
 }*/
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1470px !important;
+    }
+}
